social buttons layout problem fixed

--- a/portfolio/src/scss/_socials.scss
+++ b/portfolio/src/scss/_socials.scss
@@ -26,6 +26,8 @@
     align-items: flex-start;
     justify-content: flex-start;
     margin-top: 1rem;
+    width: fit-content;
+    height: fit-content;
 
     
     &Button {
